--- a/views/help.hbs
+++ b/views/help.hbs
@@ -1,11 +1,14 @@
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/css/style.css" />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>{{title}}</title>
   </head>
   <body>
-    <h1>from a static file</h1>
+    <h1>{{title}}</h1>
   </body>
 </html>
