--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,15 @@
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="./js/app.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+
+    <title>Document</title>
   </head>
   <body>
-    <h1>About</h1>
+    <h1>{{title}}</h1>
+    <p>Created by : {{name}}</p>
   </body>
 </html>
