--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,10 +9,10 @@
     <title>About</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
-
+{{>header}}
     <img src="/img/Med Aziz Benhmida.png" />
-    <p>Created by : {{name}}</p>
 
+
+{{>footer}}
   </body>
 </html>
