--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,6 +9,9 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
+{{>header}}
+
+<p>{{helpText}} </p>
+  {{>footer}}
   </body>
 </html>
