--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,46 @@ h1 {
 img {
   width: 750px;
 }
+
+.notFound {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 120vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Montserrat";
+  color: rgb(56, 56, 56);
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.wrapper h1 {
+  font-size: 3rem;
+}
+.wrapper .message {
+  font-size: 1.5rem;
+  padding: 20px;
+  text-align: center;
+  width: 60%;
+}
+.notFound .btn {
+  background: rgb(88, 0, 202);
+  text-decoration: none;
+  font-size: 1.5rem;
+  padding: 12px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.notFound .btn :hover {
+  background: rgb(88, 0, 202);
+}
+.copyRights {
+  margin-top: 60px;
+  margin-bottom: 300px;
+}
