--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,50 +1,30 @@
-h1 {
-  color: grey;
+body {
+  color: #333333;
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+footer {
+  color: #888888;
+  border-top: 1px solid #eeeeee;
+  margin-top: 16px;
+  padding: 16px 0;
 }
 
+header {
+  margin-top: 16px;
+  margin-bottom: 48px;
+}
+h1 {
+  font-size: 64px;
+  margin-bottom: 16px;
+}
+header a {
+  color: #888888;
+  margin-right: 16px;
+  text-decoration: none;
+}
 img {
   width: 750px;
-}
-
-.notFound {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  height: 120vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: "Montserrat";
-  color: rgb(56, 56, 56);
-}
-.wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.wrapper h1 {
-  font-size: 3rem;
-}
-.wrapper .message {
-  font-size: 1.5rem;
-  padding: 20px;
-  text-align: center;
-  width: 60%;
-}
-.notFound .btn {
-  background: rgb(88, 0, 202);
-  text-decoration: none;
-  font-size: 1.5rem;
-  padding: 12px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.notFound .btn :hover {
-  background: rgb(88, 0, 202);
-}
-.copyRights {
-  margin-top: 60px;
-  margin-bottom: 300px;
 }
