--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,14 @@ body {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 16px;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1;
 }
 footer {
   color: #888888;
@@ -25,6 +33,21 @@ header a {
   margin-right: 16px;
   text-decoration: none;
 }
-img {
+.cover {
   width: 750px;
+}
+
+.main-content {
+}
+
+input {
+  border: 1px solid #cccccc;
+  padding: 8px;
+}
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background: #888888;
+  color: white;
+  padding: 8px;
 }
