--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/style.css" />
-
+    <link rel="icon" href="/img/weather.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,14 @@
     <title>{{title}}</title>
   </head>
   <body>
+<div class="main-content">
+
 {{>header}}
 
 <p>{{helpText}} </p>
+</div>
+
+
   {{>footer}}
   </body>
 </html>
