--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="./js/app.js"></script>
+    <link rel="icon" href="/img/weather.png">
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +10,21 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="main-content">
    {{>header}}
+
+   <p>Use this site to ge your weather</p>
+<form>
+<input  name="location" id="location" placeholder="location">
+   <button>Search</button>
+   </form>
+
+   <p id='message-1' class=""></p>
+
+   <p id='message-2'class=""></p>
+    </div>
+
 {{>footer}}
+    <script src="./js/app.js"></script>
   </body>
 </html>
